<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2021 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
  <com.google.android.material.navigationrail.NavigationRailView
    android:id="@+id/cat_navigation_rail"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:menu="@menu/navigation_rail_menu"
    android:fitsSystemWindows="false"/>

  <androidx.core.widget.NestedScrollView
      android:id="@+id/cat_navigation_rail_nested_scroll_view"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:fadeScrollbars="false">

    <LinearLayout
        android:id="@+id/demo_controls"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cat_navigation_rail_standard_spacing"
        android:layout_marginBottom="@dimen/cat_navigation_rail_standard_spacing"
        android:layout_marginLeft="@dimen/cat_navigation_rail_standard_spacing"
        android:layout_marginRight="@dimen/cat_navigation_rail_standard_spacing"
        android:gravity="center_horizontal"
        android:orientation="vertical">

      <FrameLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
        <TextView
            android:id="@+id/page_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_1_name"/>
        <TextView
            android:id="@+id/page_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_2_name"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/page_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_3_name"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/page_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_4_name"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/page_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_5_name"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/page_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_6_name"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/page_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_7_name"
            android:visibility="gone"/>
      </FrameLayout>

      <Button
          android:id="@+id/add_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_navigation_rail_add_nav_item"/>
      <Button
          android:id="@+id/remove_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_navigation_rail_remove_nav_item"/>
       <Button
          android:id="@+id/increment_badge_number_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cat_navigation_rail_increment_badge_number"/>
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:labelFor="@+id/badge_gravity_spinner"
            android:text="@string/cat_navigation_rail_badge_gravity_spinner_label"/>
        <Spinner
            android:id="@id/badge_gravity_spinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end|center_vertical"
          android:labelFor="@+id/bold_text_switch"
          android:text="@string/cat_navigation_rail_label_active_bold" />
        <com.google.android.material.materialswitch.MaterialSwitch
          android:id="@+id/bold_text_switch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp" />
      </LinearLayout>
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</LinearLayout>
